5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1884_1642.log
== TEST (2019-07-04 18:24:42) 
-- CODE:
from numpy import*
tur=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(tur==5):
print(tur)



-- ERROR:
File "XXXX", line 8
    print(tur)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:24:58) 
-- CODE:
from numpy import*
tur=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(tur==5):
print(i)



-- ERROR:
File "XXXX", line 8
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:24:59) 
-- CODE:
from numpy import*
tur=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(tur==5):
print(i)



-- ERROR:
File "XXXX", line 8
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:20) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(v==5):
print(v)



-- ERROR:
File "XXXX", line 8
    print(v)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:21) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(v==5):
print(v)



-- ERROR:
File "XXXX", line 8
    print(v)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:24) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(v==5):
print(v)



-- ERROR:
File "XXXX", line 8
    print(v)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:25:24) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(v==5):
print(v)



-- EXECUTION TIME:
0.52918
-- ERROR:
  File "/home/codebench/codes/1884/1642/main.py", line 8
    print(v)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:25) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(v==5):
print(v)



-- ERROR:
File "XXXX", line 8
    print(v)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:28:28) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(v==5):
print(v)
   else
print(i)



-- ERROR:
File "XXXX", line 8
    print(v)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:29:04) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(v==5):
print(sim)
   else
print(nao)



-- ERROR:
File "XXXX", line 8
    print(sim)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:29:05) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(v==5):
print(sim)
   else
print(nao)



-- ERROR:
File "XXXX", line 8
    print(sim)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:36:47) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(v==5):
print(sim)
   else
print(nao)




-- ERROR:
File "XXXX", line 8
    print(sim)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:36:50) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(v==5):
print(sim)
   else
print(nao)




-- ERROR:
File "XXXX", line 8
    print(sim)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:36:51) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
z=zeros(N, dtype=int)
i=0
i=i+1 
for i in range(size(tur)):
	if(v==5):
print(sim)
   else
print(nao)




-- EXECUTION TIME:
0.538335
-- ERROR:
  File "/home/codebench/codes/1884/1642/main.py", line 8
    print(sim)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:06:46) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
p=0
for i in range(size(v)):
	 if(v[i]%5==0):
		c[p]=i
		p=p+1
print(i)
print(c)





-- ERROR:
File "XXXX", line 11
    c[p]=i
         ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:07:22) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=i
		p=p+1
print(i)
print(c)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:07:39) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=i
		p=p+1
print(i)
print(c)





-- EXECUTION TIME:
0.877697
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
12
[ 0  1  5  6 10 11  0  0  0  0  0  0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
12
[ 0  1  5  6 10 11  0  0  0  0  0  0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
8
[0 1 3 7 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:07:40) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=i
		p=p+1
print(i)
print(c)





-- EXECUTION TIME:
2.04152
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
12
[ 0  1  5  6 10 11  0  0  0  0  0  0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
8
[0 1 3 6 7 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
8
[0 1 3 7 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:07:46) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=i
		p=p+1
print(i)
print(c)





-- EXECUTION TIME:
1.25742
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
12
[ 0  1  5  6 10 11  0  0  0  0  0  0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
8
[0 1 3 6 7 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
8
[0 1 3 7 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:07:56) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=i
		p=p+1
print(i)
print(c)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:08:02) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=i
		p=p+1
print(i)
print(c)





-- EXECUTION TIME:
1.899
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
12
[ 0  1  5  6 10 11  0  0  0  0  0  0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
digite o vetor: 8
[0 1 3 6 7 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
digite o vetor: 8
[0 1 3 7 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:08:03) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=i
		p=p+1
print(i)
print(c)





-- EXECUTION TIME:
2.55319
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
12
[ 0  1  5  6 10 11  0  0  0  0  0  0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
digite o vetor: 8
[0 1 3 6 7 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
digite o vetor: 8
[0 1 3 7 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:08:03) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=i
		p=p+1
print(i)
print(c)





-- EXECUTION TIME:
3.33534
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
digite o vetor: 8
[0 1 3 6 7 0 0 0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
digite o vetor: 8
[0 1 3 7 0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:10:46) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
e=0
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=c[p]+e
		p=p+1
	e=e+1
print(i)
print(c)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:10:55) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
e=0
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=c[p]+e
		p=p+1
	e=e+1
print(i)
print(c)





-- EXECUTION TIME:
1.08655
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
12
[ 0  1  5  6 10 11  0  0  0  0  0  0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
8
[0 1 3 6 7 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
8
[0 1 3 7 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:11:21) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
for i in range(size(v)):
	if(v[i]%5==0):
		i=i+1
c=zeros(i, dtype=int)
e=0
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=c[p]+e
		p=p+1
	e=e+1
print(i)
print(c)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:12:50) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
e=0
for i in range(size(v)):
	if(v[i]%5==0):
		e=e+1	
c=zeros(i, dtype=int)
s=0
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=c[p]+s
		p=p+1
	e=e+1
print(i)
print(c)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:12:55) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
e=0
for i in range(size(v)):
	if(v[i]%5==0):
		e=e+1	
c=zeros(e, dtype=int)
s=0
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=c[p]+s
		p=p+1
	e=e+1
print(i)
print(c)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:13:13) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
e=0
for i in range(size(v)):
	if(v[i]%5==0):
		e=e+1	
c=zeros(e, dtype=int)
s=0
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=c[p]+s
		p=p+1
	s=s+1
print(e)
print(c)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:13:21) 
-- CODE:
from numpy import*
v=array(eval(input("digite o vetor: ")))
i=0
e=0
for i in range(size(v)):
	if(v[i]%5==0):
		e=e+1	
c=zeros(e, dtype=int)
s=0
p=0
for i in range(size(v)):
	if(v[i]%5==0):
		c[p]=c[p]+s
		p=p+1
	s=s+1
print(e)
print(c)





-- EXECUTION TIME:
1.12486
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 1 3 7]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
